# aperture

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
app/: e2e-browser.mjs  index.html  package.json  personas-browser.mjs  tsconfig.json  tsconfig.node.json  vite.config.ts
app/src/: App.tsx  main.tsx  vite-env.d.ts
app/src/aperture/: DemoContext.tsx  client.ts  config.ts  format.ts
app/src/styles/: hero.css  personas.css  theme.css
app/src/views/: AuditorView.tsx  CounterpartyView.tsx  HeroDemo.tsx  InstitutionView.tsx  PublicExplorerView.tsx
circuits/: compile.sh  package-lock.json  package.json
circuits/disclosure/: disclosure.circom  gen_input.mjs  setup_prove.sh
circuits/disclosure/_smoke/: smoke.circom
circuits/lib/aperture/: cipher_constants.circom  cipher_iso.circom  merkle.circom
circuits/lib/poseidon-cipher/: PROVENANCE.md
circuits/test/: constraints.test.mjs  full.test.mjs  scheme.mjs  util.mjs
circuits/test/circuits/: membership.circom  nonmembership.circom  primitives.circom
contracts/groth16-verifier/: Cargo.toml
contracts/groth16-verifier/src/: lib.rs  test.rs
docs/: DISCLOSURE_DESIGN.md  RUNBOOK.md
sdk/: package.json  tsconfig.json
sdk/examples/: e2e.mjs  quickstart.ts
sdk/src/: aperture.ts  auditor.ts  encode.test.ts  encode.ts  index.ts  node.ts  poseidon.ts  prover.ts  shims.d.ts  verifier.ts  witness.ts
tools/proof-encoder/: Cargo.toml
tools/proof-encoder/src/: main.rs
